Marcação de pagamentos de diárias pronto.
